
Changelog
=========

1.8.0 (unreleased)
------------------

- Remove category descriptions feature which was only ever used in the no
  longer maintained seantis.dir.council. Closes #20.
  [href]


1.7.8 (2014-10-29)
------------------

- Adds the ability to filter the directory's kml-document by category.
  [href]

1.7.7 (2014-10-20)
------------------

- Remove deprecated.js for openlayers. Requires collective.geo.openlayers 3.1.
  [href]

1.7.6 (2014-09-23)
------------------

- Disable 'orphans' in batching, it doesn't work as expected. See
  https://github.com/seantis/seantis.dir.facility/issues/2
  [href]

1.7.5 (2014-06-18)
------------------

- Don't store marker images for items persistently. Fixes #15.
  [msom]

1.7.4 (2014-04-24)
------------------

- Fix fuzzy search.
  [msom]

- Add zoom to location on map functionality again.
  [msom]

1.7.3 (2014-04-10)
------------------

- Make the circles in the collective geo maps more visible again.
  [msom]

1.7.2 (2014-02-05)
------------------

- No longer fix the width of the search/filter viewlet in python. This will
  impact the style of existing themes, except for plonetheme.onegov.
  [href]

- Integrate seantis.plonetools.
  [href]

- Fixes geo customstyles not returning a value.
  [href]

1.7.1 (2014-01-22)
------------------

- Switching between locked/unlocked categories no longer results in ability
  to save an item. Fixes #11.
  [href]

- No longer trigger a transaction on a simple read-only view request. Fixes #9.
  [href]

1.7 (2013-11-21)
----------------

- Upgrade to latest collective.geo releases. Please note that an upgrade step
  is necessary for each module using seantis.dir.base. Implemented as follows:

  https://github.com/seantis/seantis.dir.contacts/commit/02c18f8f10fb20ac1610d94204e7ff753bfbaadf
  (note that the release is 1.7 instead of 1.6)

- Adds category values to extended data if collective.geo.fastkml is installed.